--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-resource": "^1.0.2"
   },
   "dependencies": {
-    "normalize.css": "^4.2.0"
+    "normalize.css": "^4.2.0",
+    "stylus": "^0.54.5"
   }
 }
