--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jquery": "^3.1.0",
     "laravel-elixir": "^6.0.0-9",
     "laravel-elixir-browserify-official": "^0.1.3",
+    "laravel-elixir-livereload": "^1.1.6",
     "laravel-elixir-vue": "^0.1.4",
     "laravel-elixir-vueify": "^2.0.0",
     "laravel-elixir-webpack-official": "^1.0.2",
