--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "jquery": "^3.1.0",
     "laravel-elixir": "^6.0.0-9",
     "laravel-elixir-browserify-official": "^0.1.3",
-    "laravel-elixir-livereload": "^1.1.6",
     "laravel-elixir-vue": "^0.1.4",
     "laravel-elixir-vueify": "^2.0.0",
     "laravel-elixir-webpack-official": "^1.0.2",
@@ -20,6 +19,8 @@
   },
   "dependencies": {
     "normalize.css": "^4.2.0",
-    "stylus": "^0.54.5"
+    "stylus": "^0.54.5",
+    "vue-resource": "^1.0.3",
+    "vue-router": "^0.7.13"
   }
 }
