--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-resource": "^1.0.2"
   },
   "dependencies": {
+    "moment": "^2.15.1",
     "normalize.css": "^4.2.0",
     "stylus": "^0.54.5",
     "vue-resource": "^1.0.3",
